# NWEN241

Assignments/NWEN241_Assignment1/: CMakeLists.txt
Assignments/NWEN241_Assignment1/files/: editor.c  editor.h  t1test  t2test  t3test  t3test.c  t4test  t4test.c
Assignments/NWEN_Assignment_1/files/: a.out  editor.c  t3test_new.c
Assignments/NWEN_Assignment_2/files/: dbms.c  t1test  t1test.c  t2test  t3test
Assignments/NWEN_Assignment_3/files/: server  server.c
Assignments/NWEN_Assignment_4/files/: abstractdb.cpp  abstractdb.hpp  t3test.cpp  test3  test4  test5  vectordb.cpp  vectordb.hpp
Exercises/Exercise_1/: a.out  activity1.c  activity2.c  activity3.c  activity4.c  activity5.c
Exercises/NWEN_Exercise_1/: activity6.c  hello
Exercises/NWEN_Exercise_2/: activity1  activity1.c  activity2  activity2.c  activity3  activity3.c  activity4  activity4.c  buggy  buggy.c
Exercises/NWEN_Exercise_2/buggy.dSYM/Contents/Resources/DWARF/: buggy
Exercises/NWEN_Exercise_3/: activity1.c  activity2.c  activity3.c  test  test2  test3
Exercises/NWEN_Exercise_4/: a.out  activity1.c  activity2.c  activity3.cpp  test  test1
Practise/Week 8/: Exec System call - Example 3.c  Fork System call - Example 1.c  Fork System call - Example 2.c  Server-fork.c  Wait-Example 4.c  p1.c  p2.c  test
Practise/hmmm/: CMakeLists.txt  main.cpp
Practise/week 10/: CMakeLists.txt  Time.cpp  Time.h  main.cpp
Practise/week 14/: main.cpp
Tutorials/: stud.h  test  tut_1.c
